[project]
name = "retrydecorator"
version = "0.1.0"
description = "Decorator to allow for retry of th decorated object if a given exception is raised"
authors = [
    {name = "Vincent Martel"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RetryDecorator"
